# education-advisor

./: .env.example  .gitattributes  .gitignore  BACKLOG.md  BUG_REPORT.md  CHANGELOG.md  CODE_REVIEW_REPORT.md  CODE_STYLES.md  CONTRIBUTING-TAURI.md  CONTRIBUTING.md  Cargo.toml  DEPLOY_TO_AI.md  LICENSE  LICENSE-APACHE  NOTICE  PROJECT_INTRO.md  README-TAURI.md  README.md  REVIEW_REPORT.md  REVIEW_REPORT_20260616.md  ROADMAP.md  VERSION_HISTORY.md  biome.json  copaw  deepseek_html_20260624_97c9e0 (1).html  electron-builder.yml  install.sh  package-lock.json  package.json  perf-report.md  regression_final.js  regression_test.js  tailwind.config.js  tsconfig.json  uninstall.sh  vite.config.main.ts  vite.config.renderer.ts  vitest.config.ts
.github/: labeler.yml
agents/: academic.md  class-monitor.md  discipline-officer.md  governor.md  home_school.md  main.md  risk-alert.md
benchmark/: auto_test_10rounds.sh  auto_test_10rounds_v2.sh  benchmark_10rounds.sh
config/: agents.yaml  default-settings.json  main_AGENTS.md  main_SOUL.md  main_USER.md
core/eaa-cli/: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
core/eaa-cli/.github/workflows/: ci.yml
core/eaa-cli/agents/governor/: AGENTS.md
core/eaa-cli/config/: main_IDENTITY.md  main_USER.md
core/eaa-cli/core/eaa-cli/src/: commands.rs
core/eaa-cli/crates/agent-isolation/src/: lib.rs
core/eaa-cli/crates/callback-signature/src/: lib.rs
core/eaa-cli/crates/data-validation/src/: lib.rs
core/eaa-cli/crates/log-redact/src/: lib.rs
core/eaa-cli/deploy/: eaa_wrapper.sh
core/eaa-cli/docker/: docker-compose.yml
core/eaa-cli/docs/: CLI_REFERENCE.md  SECURITY.md
core/eaa-cli/examples/students/: 示例学生_张三.md
core/eaa-cli/releases/linux-arm64/: README.md
core/eaa-cli/scripts/: eaa_extended.py  migrate.py  migrate_to_pg.py
core/eaa-cli/src/: commands.rs  lib.rs  main.rs  storage.rs  types.rs  validation.rs
core/eaa-cli/src/backend/: postgres.rs
core/eaa-cli/src/privacy/: mod.rs
core/eaa-cli/tests/: cli_tests.rs
docs/: AGENT_AUTHORING.md  ARCHITECTURE.md  CLI_REFERENCE.md  CONFIGURATION.md  CRON.md  DEPLOYMENT.md  DESKTOP_BUILD.md  DEVELOPMENT.md  DISTRIBUTION.md  EAA_BRIDGE.md  EVENT_SOURCING.md  FAQ.md  HARNESS_ARCHITECTURE.md  HARNESS_AUDIT.md  PRIVACY_ENGINE.md  QUICK_START.md  REVIEW_REPORT_20260610.md  SECURITY.md  SYSTEM_ARCHITECTURE.md  TROUBLESHOOTING.md  VALIDATION_REPORT.md  index.md
dogfood-output/: TEST-SUMMARY-REPORT.md  cdp-cleanup.cjs  cdp-deep.cjs  cdp-deep2.cjs  cdp-deep3.cjs  cdp-diag.cjs  cdp-explore.cjs  cdp-fix-settings.cjs  cdp-fix-weekly.cjs  cdp-probe.cjs  cdp-probe10.cjs  cdp-probe11.cjs  cdp-probe12.cjs  cdp-probe13.cjs  cdp-probe14.cjs  cdp-probe15.cjs  cdp-probe16.cjs  cdp-probe2.cjs  cdp-probe3.cjs  cdp-probe4.cjs  cdp-probe5.cjs  cdp-probe6.cjs  cdp-probe7.cjs  cdp-probe8.cjs  cdp-probe9.cjs  cdp-round10.cjs  cdp-round11.cjs  cdp-round12.cjs  cdp-round13.cjs  cdp-round14.cjs  cdp-round15.cjs  cdp-round16.cjs  cdp-round17.cjs  cdp-round18.cjs  cdp-round19.cjs  cdp-round20.cjs  cdp-round21.cjs  cdp-round6.cjs  cdp-round7.cjs  cdp-round8.cjs  (+177 more)
education-advisor-egui/: Cargo.toml
education-advisor-egui/.github/workflows/: release.yml
education-advisor-egui/src/: agents.rs  ai.rs  app.rs  charts.rs  db.rs  llm.rs  main.rs  models.rs  privacy.rs  runtime.rs  scheduler.rs  students.rs  theme.rs  tray.rs  util.rs
education-advisor-egui/src/ui/: agent_history_page.rs  agents_page.rs  chat.rs  dashboard.rs  icons.rs  mod.rs  models_page.rs  privacy_page.rs  rag_page.rs  scheduler_page.rs  settings_page.rs  sidebar.rs  skills_page.rs  students_page.rs  toast.rs  topbar.rs  widgets.rs
iced-app/: Cargo.toml  PLAN.md
memory/: 2026-06-10.md  heartbeat-state.json
migrations/: 001_init.sql
releases/: README.md
scripts/: add-license-headers.sh  analyze_links.py  checkpoint_before_response.py  eaa_bitable_sync.py  gen-signer.mjs  init_system.py  link_chain.py  refine-wording.ps1  rename-brand.ps1  run_supervisor_check.py  save_inbox.py  self-check.cjs  supervisor_quick_scan.py  validator_quick_check.py
single-agent/: DEPLOY.md  SOUL.md  USER.md
site/: README.md  download.html  index.html  legal.html
skills/: STUDENT_MANAGEMENT.md
src/: Cargo.toml  agents.rs  ai.rs  app.rs  audit.rs  (+14 more)
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/benches/: tool_dispatch.rs
src-tauri/capabilities/: default.json
src-tauri/docs/: 00-OVERVIEW.md  01-ARCHITECTURE.md  02-RUST-CORE-REUSE.md  03-COMMANDS-MAP.md  04-FRONTEND-SHIM.md  05-BUILD-RUN.md  06-MIGRATION-CHECKLIST.md  07-PLUGINS.md  08-OAUTH.md  CHANGELOG.md
src-tauri/eval/datasets/: privacy.jsonl  safety.jsonl  task_completion.jsonl  tool_correctness.jsonl
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: agent.rs  ai.rs  chat.rs  compliance.rs  cron.rs  eaa.rs  feishu.rs  log_viewer.rs  mod.rs  privacy.rs  profile.rs  settings.rs  skill.rs  sys.rs
src-tauri/src/harness/: error.rs  mod.rs
src-tauri/src/harness/agent/: budget.rs  event_bridge.rs  mod.rs  prompt_builder.rs  react_machine.rs  state_store.rs  trace.rs
src-tauri/src/harness/eval/: dataset.rs  judge.rs  mod.rs  report.rs  runner.rs  scorer.rs
src-tauri/src/harness/guardrails/: hitl.rs  input_filter.rs  mod.rs  output_filter.rs  sandbox.rs
src-tauri/src/harness/tools/: capability.rs  eaa_bridge.rs  macros.rs  mod.rs  registry.rs
src-tauri/src/platform/: mod.rs  windows_focus.rs
src-tauri/src/services/: agent_runner.rs  agent_service.rs  broadcaster.rs  db.rs  feishu_service.rs  keystore.rs  llm_service.rs  memory_service.rs  mod.rs  oauth.rs  privacy_audit.rs  profile_service.rs  redaction_layer.rs  scheduler.rs  settings_service.rs  skill_service.rs  tray.rs
src-tauri/src/tools/: data_cache.rs  eaa_tools.rs  file_tools.rs  mod.rs  utility.rs
src-tauri/tests/: cache.rs  contract.rs  eval_integration.rs  guardrails_integration.rs  harness_react_loop.rs  integration.rs  links.rs  llm_tool_loop.rs  oauth.rs  services.rs  subcrates.rs  tools_integration.rs
src-tauri/tests/common/: mod.rs
(+426 files in other folders)
