[package]
name = "eaa"
version = "3.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
fs2 = "0.4"
sha2 = "0.10"
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "std"] }
aho-corasick = "1.1"
once_cell = "1.19"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
